<resources>
    <string name="app_name">CarteraClients</string>
    <string name="title_activity_act_main">Cartera Clientes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="TittleClients">Clients</string>
    <string name="Message">Message</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_act_nuevo_cliente">ActNuevoCliente</string>
    <string name="name">Name</string>
    <string name="PushName">Enter your name</string>
    <string name="direction">Direction</string>
    <string name="EnterDirection">Enter your direction</string>
    <string name="Email">E-mail</string>
    <string name="EnterEmail">Enter your e-mail</string>
    <string name="Phone">Phone</string>
    <string name="EnterPhone">Enter your phone</string>
    <string name="NewClient">New Client</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
</resources>